--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,137 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "Vollkorn SC", serif;
+  src: url("https://fonts.googleapis.com/css2?family=Vollkorn+SC:wght@400;600;700;900&display=swap");
+}
+@font-face {
+  font-family: "Inter", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "Verdana";
+  src: url("./assets/fonts/verdana.ttf");
+}
+@font-face {
+  font-family: "Poppins", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+.bg-grad {
+  background: linear-gradient(
+    90deg,
+    #ffc752 0%,
+    #ff8b48 21.15%,
+    #f14d5c 44.06%,
+    #d63f8f 72.19%,
+    #9834c5 98.23%
+  );
+}
+.bg-tk {
+  background: linear-gradient(
+    90deg,
+    #00f2ea 8.69%,
+    #000 48.23%,
+    #000 63.85%,
+    #ff0050 100%
+  );
+}
+.pink-bg {
+  background-image: linear-gradient(
+    360deg,
+    #f72585 15%,
+    rgba(255, 255, 255, 0) 60% 
+  ), url("./assets/images/turkona.png");
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: center !important;
+}
+
+.circle::before{
+  content: "";
+  border-radius: 50%;
+  display:inline-flex;
+  width: 18px;
+  margin-right: 40px;
+  height: 18px;
+  background: #F72585;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+@media only screen and (min-width: 1200px){
+  .circle::before{
+    content: "";
+    border-radius: 50%;
+    display:inline-flex;
+    width: 18px;
+    margin-right: 40px;
+    height: 18px;
+    background: #F72585;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+  }
+  .checkbox::before{
+    content:url('./assets/icons/checked.png');
+    margin-right: 4px;
+    align-items: center;
+    display: inline-flex;
+  
+  
+  }
+}
+@media only screen and (max-width: 600px){
+  .circle::before{
+    content: "";
+    border-radius: 50%;
+    display:inline-flex;
+    width: 10px;
+    margin-right: 25px;
+    height: 10px;
+    background: #F72585;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+  }
+}
+
+
+.checkbox::before{
+  content:url('./assets/icons/checked.png');
+  margin-right: 4px;
+  align-items: center;
+  display: inline-flex;
+
+
+}
+
+.form{
+  background: url('./assets/images/bg.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat
+}
+.hover-cont:hover{
+  cursor: pointer;
+}
+.hover-cont:hover .meals{
+  z-index: 1;
+  transform: translateY(60px);
+  -webkit-transform: translateY(60px);
+  -moz-transform: translateY(60px);
+  -ms-transform: translateY(60px);
+  -o-transform: translateY(60px);
 }
