--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@
     border-radius: 50%;
     display:inline-flex;
     width: 10px;
-    margin-right: 25px;
+    margin-right: 10px;
     height: 10px;
     background: #F72585;
     -webkit-border-radius: 50%;
@@ -119,7 +119,7 @@
 }
 
 .form{
-  background: url('./assets/images/bg.png');
+  background: url('https://video-psi-mocha.vercel.app/bg.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat
@@ -134,4 +134,62 @@
   -moz-transform: translateY(60px);
   -ms-transform: translateY(60px);
   -o-transform: translateY(60px);
+}
+.lds-heart {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  transform: rotate(45deg);
+  transform-origin: 40px 40px;
+}
+.lds-heart div {
+  top: 32px;
+  left: 32px;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.lds-heart div:after,
+.lds-heart div:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+}
+.lds-heart div:before {
+  left: -24px;
+  border-radius: 50% 0 0 50%;
+}
+.lds-heart div:after {
+  top: -24px;
+  border-radius: 50% 50% 0 0;
+}
+@keyframes lds-heart {
+  0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  39% {
+    transform: scale(0.85);
+  }
+  45% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(0.9);
+  }
+}
+
+.active{
+  color: white;
 }
