--- a/src/index.css
+++ b/src/index.css
@@ -66,17 +66,6 @@
     #ff0050 100%
   );
 }
-.pink-bg {
-  background-image: linear-gradient(
-      360deg,
-      #f72585 15%,
-      rgba(255, 255, 255, 0) 60%
-    ),
-    url("./assets/images/turkona.png");
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-  background-position: center !important;
-}
 
 .circle::before {
   content: "";
@@ -111,8 +100,26 @@
     align-items: center;
     display: inline-flex;
   }
+  .pink-bg {
+    background-image:
+      url("./assets/images/bg.png");
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-position: center !important;
+  }
 }
 @media only screen and (max-width: 600px) {
+  .pink-bg {
+    background-image: linear-gradient(
+        360deg,
+        #f72585 15%,
+        rgba(255, 255, 255, 0) 60%
+      ),
+      url("./assets/images/turkona.png");
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-position: center !important;
+  }
   .circle::before {
     content: "";
     border-radius: 50%;
